envoy-local-ratelimit.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
static_resources:
  clusters:
    - name: mock
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: round_robin
      load_assignment:
        cluster_name: mock
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mock
                      port_value: 9999

  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress
                http_filters:
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: "local_rate_limit"
                      token_bucket:
                        max_tokens: 1
                        tokens_per_fill: 1
                        fill_interval: "60s"
                      filter_enabled:
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      filter_enforced:
                        default_value:
                          numerator: 100
                          denominator: HUNDRED
                      always_consume_default_token_bucket: false
                      descriptors:
                        - entries:
                            - key: token
                              value: "1"
                          token_bucket:
                            max_tokens: 3
                            tokens_per_fill: 3
                            fill_interval: "60s"
                        - entries:
                            - key: token
                              value: "2"
                          token_bucket:
                            max_tokens: 3
                            tokens_per_fill: 3
                            fill_interval: "60s"
                      rate_limits:
                        - actions:
                            - query_parameters:
                                query_parameter_name: "token"
                                descriptor_key: "token"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: /test
                          route:
                            cluster: mock
